# Filters-Program

./: .gitignore  CMakeLists.txt  README.md
src/: commandLine.cpp  commandLine.h  filterException.cpp  filterException.h  help.cpp  help.h  main.cpp  type.h
src/filter/: blur.cpp  blur.h  channelRotate.cpp  channelRotate.h  filter.cpp  filter.h  filterList.cpp  filterList.h  flat.cpp  flat.h  merge.cpp  merge.h  parameter.cpp  parameter.h  poster.cpp  poster.h  util.cpp  util.h
src/filter/filters/: NoiseScale.cpp  badShlek.cpp  blur.cpp  blur.h  channelRotate.cpp  channelRotate.h  cut.cpp  filters.h  glow.cpp  merge.cpp  merge.h  noise.cpp  poster.cpp  poster.h  puzzle.cpp  shlek.cpp  shlek.h  shockwave.cpp  shockwave.h  shred.cpp  shred.h  smoothsplatter.cpp  sortFilter.cpp  splatter.cpp
src/img/: buffers.cpp  buffers.h  formatter.cpp  formatter.h  image.cpp  image.h
user/: CMakeLists.txt
